# ai-redteaming-simulation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
reports/: .gitkeep
src/airtsim/: __init__.py  cli.py  models.py  report.py  runner.py  scoring.py  suite_loader.py
src/airtsim/llm_backends/: __init__.py  mock.py
src/airtsim/mitigations/: __init__.py  filters.py  policy.py
src/airtsim/targets/: __init__.py  rag_customer_bot.py
suites/: data_leakage.yaml  demo.yaml  indirect_injection.yaml
tests/: __init__.py  conftest.py  test_runner_smoke.py  test_scoring.py  test_suite_loader.py
